--- a/src/test.html
+++ b/src/test.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/gh/biswarup-naha/preact-chatbot-widget@master/dist/index.umd.js" defer></script>
+    <script type="js" src="https://cdn.jsdelivr.net/gh/biswarup-naha/preact-chatbot-widget@master/dist/index.umd.js"></script>
 </body>
 </html>
