--- a/src/template.html
+++ b/src/template.html
@@ -7,8 +7,7 @@
     <% preact.headEnd %>
   </head>
   <body>
-    <div data-widget-host="habitat" class="preview" id="root">
-    </div>
+    <div id="shadow-root"></div>
     <% preact.bodyEnd %>
   </body>
 </html>
